--- a/client/src/components/molecules/common/Modal/Modal.css
+++ b/client/src/components/molecules/common/Modal/Modal.css
@@ -1,5 +1,5 @@
 dialog.volt-modal {
-    border: 1px solid var(--color-border);
+    border: 1px solid var(--color-border-soft);
     border-radius: var(--radius-md);
     padding: 0;
     width: 100%;
