fix: show the configuration of each analysis when there are multiple of them

--- a/client/src/components/molecules/scene/CanvasSidebarScene/CanvasSidebarScene.css
+++ b/client/src/components/molecules/scene/CanvasSidebarScene/CanvasSidebarScene.css
@@ -13,6 +13,16 @@
     background-color: rgba(255, 255, 255, 0.05);
 }
 
+.analysis-section-description {
+    margin-left: 1.75rem;
+    font-size: 0.75rem;
+    opacity: 0.7;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+}
+
 .analysis-section-arrow {
     display: flex;
     align-items: center;
@@ -28,6 +38,12 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.analysis-section-date {
+    font-weight: 400;
+    opacity: 0.6;
+    font-size: 0.85rem;
 }
 
 .analysis-section-content {
