feat: enhance user experience with loading states in various components and improve sign-out handling

--- a/client/src/components/atoms/common/PopoverMenuItem/PopoverMenuItem.css
+++ b/client/src/components/atoms/common/PopoverMenuItem/PopoverMenuItem.css
@@ -29,3 +29,8 @@
     opacity: 0.5;
     cursor: not-allowed;
 }
+
+.popover-menu-item .button-icon-right {
+    margin-left: auto;
+    padding-left: 12px;
+}
