--- a/client/src/pages/protected/Clusters/Clusters.css
+++ b/client/src/pages/protected/Clusters/Clusters.css
@@ -24,8 +24,9 @@
 
 /* Main page container */
 .clusters-page {
-  min-height: 100vh;
   background-color: var(--color-bg);
+  overflow: scroll;
+  height: 100% !important;
   color: var(--color-text-primary);
 }
 
