--- a/client/src/components/organisms/scene/ColorCoding/ColorCoding.css
+++ b/client/src/components/organisms/scene/ColorCoding/ColorCoding.css
@@ -7,3 +7,12 @@
 .color-coding-footer-container .button {
     width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+    .color-coding-container {
+        bottom: 5rem;
+        right: 0.5rem;
+        left: 0.5rem;
+        width: auto;
+    }
+}
